# proga_c

./: CMakeLists.txt  CMakePresets.json  main.cpp
allocator/: CMakeLists.txt
allocator/allocator/: CMakeLists.txt
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_sorted_list/: CMakeLists.txt
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
logger/: CMakeLists.txt
logger/include/: client_logger.h  client_logger_builder.h
logger/src/: client_logger.cpp  client_logger_builder.cpp  logger.cpp
